[package]
name = "display-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0"}
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3.29"
env_logger = { version = "0.10.1", features = [] }
anyhow = "1.0.75"
actix = "0.13.1"
bitvec = "1.0.1"
log = "0.4.20"
time = "0.3.30"
